Modifications après revues ECML

--- a/piot2012cascading_ECML/Biblio.bib
+++ b/piot2012cascading_ECML/Biblio.bib
@@ -5402,7 +5402,7 @@ series = {Lecture Notes in Computer Science (LNCS)},
 	Title = {{Batch, Off-policy and Model-Free Apprenticeship Learning}},
 	Year = {2011}}
 	@conference{klein2012scirl,
-author = {E. Klein and M. Geist and B. PIOT and O. Pietquin},
+author = {E. Klein and M. Geist and B. Piot and O. Pietquin},
 title = {{Inverse Reinforcement Learning through Structured Classification}},
 year = {2012},
 booktitle = {{Proc. NIPS}},
