--- a/piot2012cascading_ECML/Cascading.tex
+++ b/piot2012cascading_ECML/Cascading.tex
@@ -38,31 +38,35 @@
 \newcommand{\argmax}{\operatorname*{argmax}} %\operatorname* pour les op. pouvant admettre des limites...
 \newcommand{\Card}{\operatorname*{Card}} %\operatorname* pour les op. pouvant admettre des limites...
 
-
+\setlength\floatsep{1.25\baselineskip plus 3pt minus 2pt}
+\setlength\textfloatsep{1.25\baselineskip plus 3pt minus 2pt}
+\setlength\intextsep{1\baselineskip plus 3pt minus 2 pt}
 
 \begin{document}
 \title{A cascaded supervised learning approach to inverse reinforcement learning}
 \titlerunning{Cascading approach to IRL}
 \authorrunning{Klein, Piot, Geist and Pietquin}
-\author{Edouard Klein\inst{1,}\inst{2}, Bilal Piot\inst{2,}\inst{3}, Matthieu Geist\inst{2}, Olivier Pietquin\inst{2,}\inst{3}}
+\author{Edouard Klein\inst{1,}\inst{2}, Bilal Piot\inst{2,}\inst{3}, Matthieu Geist\inst{2}, Olivier Pietquin\inst{2,}\inst{3}\thanks{The research leading to these results has received funding from the European Union Seventh Framework Programme (FP7/2007-2013) under grant agreement n\textdegree270780.}}
 
 \institute{
- 1. ABC Team\\
- LORIA-CNRS, France.\\
+ ABC Team\, LORIA-CNRS, France.\\
 \and
-2. Supélec\\
- IMS-MaLIS Research group, France\\
+Supélec, IMS-MaLIS Research group, France\\
  \texttt{firstname.lastname@supelec.fr}\\
-\and 
-3. UMI 2958 (GeorgiaTech-CNRS)\\
-France\\}
+\and
+UMI 2958 (GeorgiaTech-CNRS), France\\
+}
 
-
-\date{\today}
+%\date{\today}
 
 
 \maketitle
+%\renewcommand*\abstractname{Acknowledgement.}
+%\begin{abstract}
+%The research leading to these results has received funding from the European Union Seventh Framework Programme (FP7/2007-2013) under grant agreement n\textdegree270780.
+%\end{abstract}
 
+\renewcommand*\abstractname{Abstract.}
 \begin{abstract}
   This paper considers the Inverse Reinforcement Learning (IRL) problem, that is inferring a reward function for which a demonstrated expert policy is optimal.
 We propose to break the IRL problem down into two generic Supervised Learning steps: this is the Cascaded Supervised IRL (CSI) approach. A classification step that defines a score function is followed by a regression step providing a reward function.
@@ -124,7 +128,7 @@ Our first step towards a reward function solving the IRL problem is a classifica
   \label{eq:greedy2}
 \pi_C(s) \in \argmax_a q(s,a).
 \end{equation}
-For example, \emph{Multi-class Support Vector Machines}~\cite{guermeur2011generic} can be seen as SFMC$^2$ algorithms, the same can be said of the structured margin approach \cite{taskar2005learning} both of which we consider in the experimental setting. Other algorithms may be envisioned (see Sec.~\ref{subsubsec:subroutines}). 
+For example, \emph{Multi-class Support Vector Machines}~\cite{guermeur2011generic} can be seen as SFMC$^2$ algorithms, the same can be said of the structured margin approach \cite{taskar2005learning} both of which we consider in the experimental setting. Other algorithms may be envisioned (see Sec.~\ref{subsubsec:subroutines}).
 
 Given a dataset $D_C = \{(s_i,a_i=\pi_E(s_i))_i\}$ of actions $a_i$ (deterministically) chosen by the expert on states $s_i$, we train such a classifier. The classification policy $\pi_C$ is not the end product we are looking for (that would be mere supervised imitation of the expert, not IRL). What is of particular interest to us is the score function $q$ itself. One can easily notice the similarity between Eq.~\eqref{eq:greedy2} and Eq.~\eqref{eq:greedy} that describes the relation between the optimal policy in an MDP and its optimal action-value function. The score function $q$ of the classifier can thus be viewed as some kind of optimal action-value function for the classifier policy $\pi_C$. By inversing the Bellman equation \eqref{eq:bellman1} with $q$ in lieu of $Q^\pi_R$, one gets $R^C$, the reward function relative to our score/action-value function $q$:
 \begin{equation}
@@ -161,7 +165,7 @@ More formally, recalling from Sec.~\ref{sec:background} that $\rho_E$ is the sta
 \begin{itemize}
   \item the classification error defined as
 $\epsilon_C=\E_{s\sim\rho_E}[\mathds{1}_{\{\pi_C(s)\neq\pi_E(s)\}}]$;
-\item the regression error defined as 
+\item the regression error defined as
  $   \epsilon_R=\max_{\pi\in A^S}\|\epsilon_\pi^R\|_{1,\rho_E}$,
   with:
   \begin{itemize}
@@ -294,7 +298,7 @@ $  D_C = \{(s_i = s_k,a_i=a_k)_i\}$.
 \subsubsection{Heuristics}
 \label{subsubsec:heuristics}
 
-It is not reasonable to construct the dataset $D_R = \{((s_k,a_k=\pi_E(s_k)),\hat r_k)_k\}$ only from expert transitions and expect a small regression error term $\epsilon_R$. Indeed, the dataset $D_E$ only samples the dynamics induced by the expert's policy and not the whole dynamics of the MDP. 
+It is not reasonable to construct the dataset $D_R = \{((s_k,a_k=\pi_E(s_k)),\hat r_k)_k\}$ only from expert transitions and expect a small regression error term $\epsilon_R$. Indeed, the dataset $D_E$ only samples the dynamics induced by the expert's policy and not the whole dynamics of the MDP.
 This means that for a certain state $s_k$ we only know the corresponding expert action $a_k=\pi_E(s_k)$ and the following state $s'_k$ sampled according to the MDP dynamics : $s'_k \sim P(\cdot|s_k,a_k)$. For the regression to be meaningful, we need samples associating the same state $s_k$ and a different action $a\neq a_k$ with a datapoint $\hat r \neq \hat r_k$.\\
 Recall that $\hat r_j = q(s_j,a_j) - \gamma q(s'_j,\pi_C(s'_j))$ (Eq.~\eqref{eq:rj}); without knowing $s'_k \sim P(\cdot|s_k,a\neq a_k)$, we cannot provide the regressor with a datapoint to associate with $(s_k,a\neq a_k)$.
 We artificially augment the dataset $D_R$ with samples $((s_j=s_k,a),r_{min})_{j;\forall a\neq \pi_E(s_j) = a_k}$ where
@@ -324,7 +328,7 @@ We referred in Sec.\ref{sec:algo} to \emph{score-function based multi-class clas
 %% \end{eqnarray*}
 %% with $l(s_i,a) = 1\textrm{ if } a\neq a_i \textrm{ and } l(s_i,a_i)=0$. The score function of this classifier is simply $q(s,a) = \theta^T \phi(s,a)$.
 We chose a SVR as a regressor in the mountain car experiment and a simple least-square regressor on the highway.
-%% Using the same features $\phi$ as our classifier, we introduce $\lambda$ a regularization coefficient (set to $0.1$ in our experiments), $I$ the identity matrix and 
+%% Using the same features $\phi$ as our classifier, we introduce $\lambda$ a regularization coefficient (set to $0.1$ in our experiments), $I$ the identity matrix and
 %% \begin{eqnarray}
 %%   \Phi = \begin{bmatrix}
 %%     \vdots\\
@@ -343,9 +347,7 @@ We chose a SVR as a regressor in the mountain car experiment and a simple least-
 %% \end{equation}
 %% The reward function is: $\hat R^C(s,a) = \omega^T \phi(s,a)$
 
-It is possible to get imaginative in the last step. For example, using a Gaussian process regressor \cite{rasmussen2006gaussian} that outputs both expectation and variance can enable (notwithstanding a nontrivial amount of work) the use of reward-uncertain reinforcement learning \cite{regan2011robust}. 
-
-Our complete instantiation of CSI is summed up in Alg.~\ref{alg:CSIimp}.
+It is possible to get imaginative in the last step. For example, using a Gaussian process regressor \cite{rasmussen2006gaussian} that outputs both expectation and variance can enable (notwithstanding a nontrivial amount of work) the use of reward-uncertain reinforcement learning \cite{regan2011robust}. Our complete instantiation of CSI is summed up in Alg.~\ref{alg:CSIimp}.
 \begin{algorithm}%[H]
     %\small
   \caption{A CSI instantiation with heuristics}
@@ -413,7 +415,7 @@ The objective criterion for success is the number of steps needed to attain the 
    \subfloat[Zoom of Fig~\ref{tutu} showing the ranking of the three IRL algorithms.]{\includegraphics[width=.5\linewidth]{"Exp14_zoom"}}
   \caption{Results on the highway driving problem.}
   \label{fig:Highway}
-  
+
 \end{figure}
 
 
@@ -425,16 +427,12 @@ The reward function $R_E$ the expert is trained by a DP algorithm on makes it go
 
 %% The feature function $\phi$ for this setting is the natural tabular feature function where each state action couple $(s,a)$ is associated with a unique index $i_{(s,a)}$. The only non-zero component of $\phi(s,a)$ is then the component at index $i_{(s,a)}$.
 
-The performance criterion for a policy $\pi$ is the mean (over the uniform distribution) value function with respect to $R_E$ : $\mathbf{E}_{s\sim\mathcal{U}}[V^{\pi}_{R_E}(s)]$. 
-
-Expert performance averages to $7.74$ ; we also show the natural random baseline that consists in drawing a random reward vector (with a uniform law) and training an agent on it. The reward functions found by SCIRL, CSI and RE are then optimized using a DP algorithm. The dataset $D_{random}$ needed by RE (and neither by CSI nor SCIRL) is made of $100$ episodes of length $10$ starting randomly in the state space and following a random policy. the dataset $D_E$ is made of $n$ episodes of length $n$, with $n \in \{3,7,10,15,20\}$.
+The performance criterion for a policy $\pi$ is the mean (over the uniform distribution) value function with respect to $R_E$ : $\mathbf{E}_{s\sim\mathcal{U}}[V^{\pi}_{R_E}(s)]$. Expert performance averages to $7.74$ ; we also show the natural random baseline that consists in drawing a random reward vector (with a uniform law) and training an agent on it. The reward functions found by SCIRL, CSI and RE are then optimized using a DP algorithm. The dataset $D_{random}$ needed by RE (and neither by CSI nor SCIRL) is made of $100$ episodes of length $10$ starting randomly in the state space and following a random policy. the dataset $D_E$ is made of $n$ episodes of length $n$, with $n \in \{3,7,10,15,20\}$.
 
 
 Results are shown Fig.~\ref{fig:Highway}. We give the values of $\mathbf{E}_{s\sim\mathcal{U}}[V^{\pi}_{R_E}(s)]$ with $\pi$ being in turn the optimal policy for the rewards given by SCIRL, CSI and RE, the policy $\pi_C$ of the classifier (the very one the classification step of CSI outputs), and the optimal policy for a randomly drawn reward. Performance for CSI is slightly but definitively higher than for SCIRL (see the $p$-values for the mean equality test in Tab.~\ref{tab:highway}, from 49 samples on), slightly below the performance of the expert itself. Very few samples (100) are needed to reliably achieve expert-level performance.
 
-It is very interesting to compare our algorithm to the behavior of a classifier alone (respectively red and green plots on Fig.~\ref{tutu}). With \emph{the exact same data}, albeit the use of a very simple heuristics, the cascading approach demonstrates far better performance from the start. This is a clear illustration of the fact that using the Bellman equation to construct the data fed to the regressor and outputting not a policy, but a reward function that can be optimized on the MDP truly makes use of the information that the transitions $(s,a,s')$ bear (we recall that the classifier only uses $(s,a)$ couples).
-
-Furthermore, the classifier whose results are displayed here is the output of the first step of the algorithm. The classification performance is obviously not that good, which points to the fact that our algorithm may be empirically more forgiving of classification errors than our theoretical bound lets us expect.
+It is very interesting to compare our algorithm to the behavior of a classifier alone (respectively red and green plots on Fig.~\ref{tutu}). With \emph{the exact same data}, albeit the use of a very simple heuristics, the cascading approach demonstrates far better performance from the start. This is a clear illustration of the fact that using the Bellman equation to construct the data fed to the regressor and outputting not a policy, but a reward function that can be optimized on the MDP truly makes use of the information that the transitions $(s,a,s')$ bear (we recall that the classifier only uses $(s,a)$ couples). Furthermore, the classifier whose results are displayed here is the output of the first step of the algorithm. The classification performance is obviously not that good, which points to the fact that our algorithm may be empirically more forgiving of classification errors than our theoretical bound lets us expect.
 
 \section{Conclusion}
 \label{sec:conclusion}
